--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -622,11 +622,16 @@ public:
 
 
 ### 322. 零钱兑换 [Medium]
+> 给定不同面额的硬币 coins 和一个总金额 amount。编写一个函数来计算可以凑成总金额所需的最少的硬币个数。如果没有任何一种硬币组合能组成总金额，返回 -1。 可以认为每种硬币的数量是无限的
+
+
+
 - dp方法的基础，**状态转移公式**： `dp[i] = min (dp[i - r_k]) + 1`
 - **初始化**： 
-  - dp[0] = 0
-  - 其他元素初始为`amount + 1`, 直接初始化为最大值，会在计算最小值chubug
+  - **dp[0] = 0**
+  - **其他元素初始为`amount + 1`**, 直接初始化为最大值，会在计算最小值chubug
 - 时间复杂度 O(nS) 空间复杂度 O(n)
+- 关键点： **`状态初始化小技巧`**
 ```
 class Solution {
 public:
