--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -19,17 +19,18 @@
   - [125. 回文串验证](#125-回文串验证)
   - [516. 最长回文子序列](#516-最长回文子序列)
 - [字符串转换问题](#字符串转换问题)
-  - [8.字符串转换整数 (atoi) Mid *](#8字符串转换整数-atoi-mid)
-  - [28. 实现strStr() 子串匹配查找 *](#28-实现strstr-子串匹配查找)
+  - [8.字符串转换整数 (atoi) Mid *](#8字符串转换整数-atoi-mid-)
+  - [28. 实现strStr() 子串匹配查找 *](#28-实现strstr-子串匹配查找-)
 - [综合问题](#综合问题)
-  - [3. 无重复字符的最长子串 * [Medium] [Tencent/字节]](#3-无重复字符的最长子串-medium-tencent字节)
+  - [3. 无重复字符的最长子串 * [Medium] [Tencent/字节]](#3-无重复字符的最长子串--medium-tencent字节)
   - [334. 递增的三元子序列 [Medium]](#334-递增的三元子序列-medium)
   - [32. 最长有效括号](#32-最长有效括号)
-  - [224. 基础计算器 [Hard] ***](#224-基础计算器-hard)
+  - [224. 基础计算器 [Hard] ***](#224-基础计算器-hard-)
   - [227. 基本计算器II [Medium]](#227-基本计算器ii-medium)
   - [402. 移除K个字符 [Medium]](#402-移除k个字符-medium)
   - [补充. 01串问题](#补充-01串问题)
   - [165.比较版本号 [Medium]](#165比较版本号-medium)
+  - [468. 验证IP地址](#468-验证ip地址)
 
 <!-- /code_chunk_output -->
 字符串问题花样繁多，面试题目难易差距显著，唯有多做多看掌握各种细节处理才能驾驭该类题目
@@ -1347,6 +1348,85 @@ public:
 ```
 
 
+### 468. 验证IP地址
+> 编写一个函数来验证输入的字符串是否是有效的 IPv4 或 IPv6 地址。
+如果是有效的 IPv4 地址，返回 "IPv4" ；
+如果是有效的 IPv6 地址，返回 "IPv6" ；
+如果不是上述类型的 IP 地址，返回 "Neither" 。
+
+- 基本的模拟判断操作
+- **特点在于要考虑比较多的情况**，多写点if else判断逻辑
+  - 字符串分段： **注意多余分段符号/重复分段符号的判断**
+  - 根据v4/v6格式要求判断字符是否合规
+  - 确认每个字符都在合法范围内
+
+
+```
+class Solution {
+public:
+    vector<string> split(string IP, char sep) {
+        int last = 0;
+        vector<string> res; 
+        for (int i = 0; i < IP.size(); i++) {
+            if (IP[i] == sep) {
+                // 重复出现 sep符号
+                if (i == last)
+                    return res;
+                res.push_back(IP.substr(last, i - last));
+                cout << IP.substr(last, i - last)<< " ";
+                last = i + 1;
+            }
+        }
+        //cout << last << " -  ";
+        if (last <= IP.size() - 1) {
+            res.push_back(IP.substr(last, IP.size() - last));
+        }
+        // 处理最后多余的seq点
+        if (last == IP.size()) return vector<string> (res.begin(), res.begin() + 1);
+        //cout << res.size() << "  ";
+        return res;
+    }
+    string checkV4(vector<string> ips) {
+        for (int i = 0; i < 4; i++) {
+            string cur = ips[i];
+            
+            for (auto p : cur) 
+                if (p >'9' || p < '0') 
+                    return "Neither";
+            if (cur.size() > 3 || (cur.size() > 1 && cur[0] == '0')) return "Neither";
+            int a = stoi(cur);
+            if (a > 255 || a < 0) return "Neither";
+            
+        }
+        return "IPv4";
+    }
+    string checkV6(vector<string> ips) {
+        for (int i = 0; i < 8; i++) {
+            string cur = ips[i];
+            if (cur.size() > 4 ) return "Neither";
+            
+            for (auto p : cur) {
+                p = tolower(p);
+                cout << p << ".";
+                if (!( (p >= '0'  && p <= '9') || (p >= 'a' && p <= 'f')) )
+                    return "Neither";
+            }
+        }
+        return "IPv6";
+    }
+    string validIPAddress(string IP) {
+        vector<string> v4 = split(IP, '.');
+        if (v4.size() == 4) {
+            return checkV4(v4);
+        }
+        vector<string> v6 = split(IP, ':');
+        if (v6.size() == 8) {
+            return checkV6(v6);
+        }
+        return "Neither";
+    }
+};
+```
 
 
 
