--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -5,12 +5,12 @@
   - [剑指62. 圆圈最后剩下的数字](#剑指62-圆圈最后剩下的数字)
   - [73. 矩阵置零  [Medium]](#73-矩阵置零--medium)
 - [滑动窗口解题技巧](#滑动窗口解题技巧)
-  - [718. 最长重复子数组](#718-最长重复子数组)
+  - [剑指57-II. 和为s的连续正数序列](#剑指57-ii-和为s的连续正数序列)
+  - [76. 最小覆盖子串 [Hard] * [字节/百度]](#76-最小覆盖子串-hard--字节百度)
+  - [补充题：最多覆盖点问题 [百度/美团 *]](#补充题最多覆盖点问题-百度美团-)
   - [209. 长度最小的子数组](#209-长度最小的子数组)
   - [293. 滑动窗口最大值 [Hard] *](#293-滑动窗口最大值-hard-)
-  - [76. 最小覆盖子串 [Hard] * [字节/百度]](#76-最小覆盖子串-hard--字节百度)
-  - [128. 最长连续序列 [字节*]](#128-最长连续序列-字节)
-  - [补充题：最多覆盖点问题 [百度/美团 *]](#补充题最多覆盖点问题-百度美团-)
+  - [718. 最长重复子数组](#718-最长重复子数组)
 
 
 ## 进阶
@@ -182,6 +182,275 @@ public:
 
 ## 滑动窗口解题技巧
 
+### 剑指57-II. 和为s的连续正数序列
+> 输入一个正整数 target ，输出所有和为 target 的连续正整数序列（**至少含有两个数**)。序列内的数字由小到大排列，不同序列按照首个数字从小到大排列
+
+```
+输入：target = 9
+输出：[[2,3,4],[4,5]]
+```
+- 题目描述中透露出浓浓的双指针解题/滑动窗口的味道
+- 解题可以**设置左右指针，每次计算窗口内的和，与target进行大小比较**
+  - 确定移动left / right指针
+  - 在找到相等窗口，存储结果后，左右指针都继续向右移动
+- 终止条件： **`left < right`**
+- 关键点： **`双指针 滑动窗口`**
+
+```c++
+class Solution {
+public:
+    vector<vector<int>> findContinuousSequence(int target) {
+        int n = target / 2 + 1;
+        int left = 1;
+        int right = 2;
+        int sum = 0;
+        vector<vector<int>> ans;
+        while (left < right) {
+            int sum =  (right - left  + 1) * (left + right) / 2;
+            if (sum == target) {
+                vector<int> tmp;
+                for (int i = left; i <= right; i++)
+                {
+                    tmp.push_back(i);
+                }
+                ans.push_back(tmp);
+                left++;
+                right++;
+            }
+            else if (sum < target) {
+                right++;
+            }
+            else if (sum > target) {
+                left++;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+
+
+
+
+
+
+### 76. 最小覆盖子串 [Hard] * [字节/百度]
+> 一个字符串 s 、一个字符串 t 。返回 s 中涵盖 t 所有字符的最小子串。如果 s 中不存在涵盖 t 所有字符的子串，则返回空字符串 ""
+
+- 两个字符串的对比和搜索，典型的滑窗题目，设置滑窗在s中搜索符合t的区间，更新滑窗的过程并更新结果
+  1. 使用哈希表存储当前滑窗数据和子串t的元素分布
+  2. [left, right)滑窗，移动right指针，将right指针对应的元素更新到滑窗中 **当t中有该元素再更新**
+  3. 当滑窗和子串need的某元素分布一致，valid++，更新当前状态
+  4. 当valid==need.size 时得到满足条件的滑窗，记录结果，并进行滑窗更新 即**移动左指针**
+    - 移动后，有很多细节需要注意：一个是valid的更新，一个是window数据的更新，仅当左指针的元素是need中元素时才进行上面的更新处理
+- 时间复杂度 O(N)
+
+```c++
+class Solution {
+public:
+    string minWindow(string s, string t) {
+        unordered_map<char, int> need;
+        for (auto c : t) {
+            need[c]++;
+        }
+        cout << need.size() << endl;
+        unordered_map<char, int> window;
+        int left = 0;
+        int right = 0;
+        int valid = 0; // 辅助判断滑窗是否满足条件
+        int min_l = INT_MAX;
+        string ans;
+        int start = 0;
+        while (right < s.size()) {
+            // s1: 构建窗口
+            char c = s[right];
+            right++;
+            // 细节1
+            if(need.count(c)) {
+                window[c]++; // 加入滑窗
+                if(window[c] == need[c]) // 某一元素满足条件
+                    valid++;
+            }
+            //printf( "1 window: [%d, %d)\n", left, right);
+            // s2 : 更新滑窗数据， 更新结果
+            // 细节2
+            while (valid == need.size()) {
+                if (right - left < min_l) {
+                    min_l = right - left;
+                    start = left;
+                }
+                char d = s[left];
+                left++;
+                // 移除辅助判断条件  更新当前滑窗状态；
+                // 细节3  只有当target串中有该元素才处理
+                if (need.count(d)) {
+                    if (window[d] == need[d]) {
+                        valid--;
+                    }
+                    window[d]--;
+                }
+            }
+            //printf( "2 window: [%d, %d)\n", left, right);
+
+        }
+        return min_l == INT_MAX ? "" : s.substr(start, min_l);
+    }
+};
+```
+
+
+### 补充题：最多覆盖点问题 [百度/美团 *]
+
+> 数轴上从左到右有n个点a[0],a[1]…,a[n-1]，给定一根长度为L的绳子，求绳子最多能覆盖其中的几个点。要求算法复杂度为o(n)， 空间复杂度为O(1)
+
+- 双指针法，滑窗进行
+- 当**当前窗口长度大于最大长度时**，更新结果 `right - left`， 并移动左指针； 否则移动右指针
+
+```
+长度： 3 ； 6个数字
+3 6
+1 2 5 6 8 9
+```
+
+```c++
+int maxPoints(vector<int>& nums, int len) {
+    int ans = 0;
+    int left = 0;
+    int right = 0;
+    while (right < nums.size()) {
+        if ( (nums[right] - nums[left]) > len) {
+            ans = max(ans, right - left);
+            left++;
+        }
+        else {
+            right++;
+        }
+        //cout << "l : " << left << " r :" << right << " " << ans << endl;
+    }
+    cout << ans << endl;
+    return ans;
+}
+```
+
+
+### 209. 长度最小的子数组
+- 计算数组中和大于目标值的最小长度的连续子数组
+- 做法一： 前缀和 + 二分搜索
+  - 计算各位置的前缀和，由于前缀和数组是有序的，可以通过二分搜索的方法来查找后续是否有满足target和要求的前缀和
+  - 时间复杂度 O(nlogn) 空间复杂度 O(n)
+```c++
+class Solution {
+public:
+     // 寻找 <= pre - target
+    int binarySearch(int target, int left, int right, vector<int>& nums) {
+        int res = -1;
+        while (left <= right) {
+            int mid = left + (right - left) / 2;
+            if (nums[mid] >= target) {
+                res = mid;
+                right = mid - 1;
+            }
+            else {
+                left = mid + 1;
+            }
+        }
+        return res;
+    }
+    int minSubArrayLen(int target, vector<int>& nums) {
+        vector<int> sums( nums.size() + 1);
+        for (int i = 0; i < nums.size(); i++) {
+            sums[i + 1] = sums[i] + nums[i];
+        }
+        int left = 0;
+        int ans = nums.size() + 1;
+        for (int i = 1; i <= nums.size(); i++) {
+            int bound = binarySearch(sums[i - 1] + target, left, sums.size() - 1, sums);
+            if (bound == -1)
+                continue;
+            ans = min(ans, bound - (i - 1));
+            left = bound;
+        }
+        return ans == nums.size() + 1 ? 0 : ans;
+    }
+};
+```
+
+- **更简单的滑窗做法**
+  - 设置左右指针，从左到右遍历，当当前窗口内和满足条件时即记录长度，并调整左指针
+    - 时间复杂度O(N) 空间复杂度 O(N)
+  - 与**补充题： 最多覆盖点题目**相似
+
+```c++
+class Solution {
+public:
+    int minSubArrayLen(int target, vector<int>& nums) {
+        int left = 0;
+        int right = 0;
+        int length = nums.size();
+        int sum = 0;
+        int ans = length + 1;
+        while (right < length && left <= right) {
+            sum += nums[right];
+            // 移动左指针，更新结果
+            while (sum >= target) {
+                ans = min(right - left + 1, ans);
+                sum -= nums[left];
+                left ++;
+            }
+            // 移动右指针
+            right++;
+        }
+        return ans == length + 1 ? 0 : ans;
+    }
+};
+```
+
+
+### 293. 滑动窗口最大值 [Hard] *
+> 一个整数数组 nums，有一个大小为 k 的滑动窗口从数组的最左侧移动到数组的最右侧。你只可以看到在滑动窗口内的 k 个数字。滑动窗口每次只向右移动一位，求每个窗口的最大值
+
+
+- 双向队列解题
+  - deque<int>window，用于存储下标。这个变量有以下特点:
+  - 变量的最前端（也就是 window.front()）是**此次遍历的最大值的下标**
+  - **当我们遇到新的数时，将新的数和双项队列的末尾（也就是window.back()）比较，如果末尾比新数小，则把末尾扔掉，直到该队列的末尾比新数大或者队列为空的时候才停止**，做法有点像使用栈进行括号匹配。
+  - 双项队列中的所有值都要在窗口范围内
+- 关键逻辑： **元素入队操作和队列合法判断**
+- 时间复杂度 O(N) 空间复杂度O(k)
+```c++
+class Solution {
+public:
+    vector<int> maxSlidingWindow(vector<int>& nums, int k) {
+        // 双向队列解题 维护队首值最大
+        if (nums.empty() || k == 0)
+            return nums;
+        deque<int> window;
+        vector<int> ans;
+        for (int i = 0; i < k; i++) {
+            while(!window.empty() && nums[i] > nums[window.back()]) {
+                window.pop_back();
+            }
+            window.push_back(i);
+        } 
+        ans.push_back(nums[window.front()]);
+        for (int i = k; i < nums.size(); i++) {
+            // 如果已经超出当前窗口 将队首进行出栈
+            if (!window.empty() && i - k >= window.front()) {
+                window.pop_front();
+            }
+            while (!window.empty() && nums[i] > nums[window.back()]) {
+                window.pop_back();
+            }
+            window.push_back(i);
+            ans.push_back(nums[window.front()]);
+        }
+        return ans;
+
+    }
+};
+```
+
 ### 718. 最长重复子数组
 > 给两个整数数组 A 和 B ，返回两个数组中公共的、长度最长的子数组的长度。
 
@@ -189,7 +458,7 @@ public:
   - 时间复杂度 O(N+M)*min(n,m) 
   - 空间复杂度 O(1)
 
-```
+```c++
 class Solution {
 public:
     int findRepeat(vector<int> A, vector<int> B, int addA, int addB, int len) {
@@ -261,258 +530,4 @@ public:
         return ans;
     }
 };
-```
-
-
-### 209. 长度最小的子数组
-- 计算数组中和大于目标值的最小长度的连续子数组
-- 做法一： 前缀和 + 二分搜索
-  - 计算各位置的前缀和，由于前缀和数组是有序的，可以通过二分搜索的方法来查找后续是否有满足target和要求的前缀和
-  - 时间复杂度 O(nlogn) 空间复杂度 O(n)
-```
-class Solution {
-public:
-     // 寻找 <= pre - target
-    int binarySearch(int target, int left, int right, vector<int>& nums) {
-        int res = -1;
-        while (left <= right) {
-            int mid = left + (right - left) / 2;
-            if (nums[mid] >= target) {
-                res = mid;
-                right = mid - 1;
-            }
-            else {
-                left = mid + 1;
-            }
-        }
-        return res;
-    }
-    int minSubArrayLen(int target, vector<int>& nums) {
-        vector<int> sums( nums.size() + 1);
-        for (int i = 0; i < nums.size(); i++) {
-            sums[i + 1] = sums[i] + nums[i];
-        }
-        int left = 0;
-        int ans = nums.size() + 1;
-        for (int i = 1; i <= nums.size(); i++) {
-            int bound = binarySearch(sums[i - 1] + target, left, sums.size() - 1, sums);
-            if (bound == -1)
-                continue;
-            ans = min(ans, bound - (i - 1));
-            left = bound;
-        }
-        return ans == nums.size() + 1 ? 0 : ans;
-    }
-};
-```
-
-- **更简单的滑窗做法**
-  - 设置左右指针，从左到右遍历，当当前窗口内和满足条件时即记录长度，并调整左指针
-    - 时间复杂度O(N) 空间复杂度 O(N)
-
-```
-class Solution {
-public:
-
-    int minSubArrayLen(int target, vector<int>& nums) {
-        int left = 0;
-        int right = 0;
-        int length = nums.size();
-        int sum = 0;
-        int ans = length + 1;
-        while (right < length && left <= right) {
-            sum += nums[right];
-            // 移动左指针，更新结果
-            while (sum >= target) {
-                ans = min(right - left + 1, ans);
-                sum -= nums[left];
-                left ++;
-            }
-            // 移动右指针
-            right++;
-        }
-        return ans == length + 1 ? 0 : ans;
-    }
-};
-```
-
-
-### 293. 滑动窗口最大值 [Hard] *
-> 一个整数数组 nums，有一个大小为 k 的滑动窗口从数组的最左侧移动到数组的最右侧。你只可以看到在滑动窗口内的 k 个数字。滑动窗口每次只向右移动一位，求每个窗口的最大值
-- 双向队列解题
-  - deque<int>window，用于存储下标。这个变量有以下特点:
-  - 变量的最前端（也就是 window.front()）是**此次遍历的最大值的下标**
-  - **当我们遇到新的数时，将新的数和双项队列的末尾（也就是window.back()）比较，如果末尾比新数小，则把末尾扔掉，直到该队列的末尾比新数大或者队列为空的时候才停止**，做法有点像使用栈进行括号匹配。
-  - 双项队列中的所有值都要在窗口范围内
-- 关键逻辑： 元素入队操作和队列合法判断
-- 时间复杂度 O(N) 空间复杂度O(k)
-```
-class Solution {
-public:
-    vector<int> maxSlidingWindow(vector<int>& nums, int k) {
-        // 双向队列解题 维护队首值最大
-        if (nums.empty() || k == 0)
-            return nums;
-        deque<int> window;
-        vector<int> ans;
-        for (int i = 0; i < k; i++) {
-            while(!window.empty() && nums[i] > nums[window.back()]) {
-                window.pop_back();
-            }
-            window.push_back(i);
-        } 
-        ans.push_back(nums[window.front()]);
-        for (int i = k; i < nums.size(); i++) {
-            // 如果已经超出当前窗口 将队首进行出栈
-            if (!window.empty() && i - k >= window.front()) {
-                window.pop_front();
-            }
-            while (!window.empty() && nums[i] > nums[window.back()]) {
-                window.pop_back();
-            }
-            window.push_back(i);
-            ans.push_back(nums[window.front()]);
-        }
-        return ans;
-
-    }
-};
-```
-
-
-
-### 76. 最小覆盖子串 [Hard] * [字节/百度]
-> 一个字符串 s 、一个字符串 t 。返回 s 中涵盖 t 所有字符的最小子串。如果 s 中不存在涵盖 t 所有字符的子串，则返回空字符串 ""
-
-- 两个字符串的对比和搜索，典型的滑窗题目，设置滑窗在s中搜索符合t的区间，更新滑窗的过程并更新结果
-  1. 使用哈希表存储当前滑窗数据和子串t的元素分布
-  2. [left, right)滑窗，移动right指针，将right指针对应的元素更新到滑窗中 **当t中有该元素再更新**
-  3. 当滑窗和子串need的某元素分布一致，valid++，更新当前状态
-  4. 当valid==need.size 时得到满足条件的滑窗，记录结果，并进行滑窗更新 即**移动左指针**
-    - 移动后，有很多细节需要注意：一个是valid的更新，一个是window数据的更新，仅当左指针的元素是need中元素时才进行上面的更新处理
-- 时间复杂度 O(N)
-
-```
-class Solution {
-public:
-    string minWindow(string s, string t) {
-        unordered_map<char, int> need;
-        for (auto c : t) {
-            need[c]++;
-        }
-        cout << need.size() << endl;
-        unordered_map<char, int> window;
-        int left = 0;
-        int right = 0;
-        int valid = 0; // 辅助判断滑窗是否满足条件
-        int min_l = INT_MAX;
-        string ans;
-        int start = 0;
-        while (right < s.size()) {
-            // s1: 构建窗口
-            char c = s[right];
-            right++;
-            // 细节1
-            if(need.count(c)) {
-                window[c]++; // 加入滑窗
-                if(window[c] == need[c]) // 某一元素满足条件
-                    valid++;
-            }
-            //printf( "1 window: [%d, %d)\n", left, right);
-            // s2 : 更新滑窗数据， 更新结果
-            // 细节2
-            while (valid == need.size()) {
-                if (right - left < min_l) {
-                    min_l = right - left;
-                    start = left;
-                }
-                char d = s[left];
-                left++;
-                // 移除辅助判断条件  更新当前滑窗状态；
-                // 细节3  只有当target串中有该元素才处理
-                if (need.count(d)) {
-                    if (window[d] == need[d]) {
-                        valid--;
-                    }
-                    window[d]--;
-                }
-            }
-            //printf( "2 window: [%d, %d)\n", left, right);
-
-        }
-        return min_l == INT_MAX ? "" : s.substr(start, min_l);
-    }
-};
-```
-
-### 128. 最长连续序列 [字节*]
-> 给定一个未排序的整数数组 nums ，找出数字连续的最长序列（不要求序列元素在原数组中连续）的长度
-
-```
-输入：nums = [100,4,200,1,3,2]
-输出：4
-解释：最长数字连续序列是 [1, 2, 3, 4]。它的长度为 4
-```
-
-- 要求时间复杂度 O(N)
-- **可以借助哈希表来实现**， 遍历每个元素是否存在连续的元素
-- 为了降低循环次数，仅当当前元素的前序值不存在时才开始搜索，**即当前元素为可能为连续段的开始元素**
-  - `s.count(p-1) == 0`
-  - 从而显著降低了时间复杂度
-
-```
-class Solution {
-public:
-    int longestConsecutive(vector<int>& nums) {
-        unordered_set<int> s;
-        for (auto p : nums) {
-            s.insert(p);
-        }
-        int ans = 0;
-        for (auto p : nums) {
-            if (!s.count(p - 1)) {                   
-                int tmp = 1;
-                while (s.count(++p)) {
-                    tmp++;
-                }
-                ans = max(ans, tmp);
-            }
-        }
-
-        return ans;
-    }
-};
-```
-
-### 补充题：最多覆盖点问题 [百度/美团 *]
-
-> 数轴上从左到右有n个点a[0],a[1]…,a[n-1]，给定一根长度为L的绳子，求绳子最多能覆盖其中的几个点。要求算法复杂度为o(n)， 空间复杂度为O(1)
-
-- 双指针法，滑窗进行
-- 当**当前窗口长度大于最大长度时**，更新结果 `right - left`， 并移动左指针； 否则移动右指针
-
-```
-长度： 3 ； 6个数字
-3 6
-1 2 5 6 8 9
-```
-
-```
-int maxPoints(vector<int>& nums, int len) {
-    int ans = 0;
-    int left = 0;
-    int right = 0;
-    while (right < nums.size()) {
-        if ( (nums[right] - nums[left]) > len) {
-            ans = max(ans, right - left);
-            left++;
-        }
-        else {
-            right++;
-        }
-        //cout << "l : " << left << " r :" << right << " " << ans << endl;
-    }
-    cout << ans << endl;
-    return ans;
-}
 ```
