--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -26,10 +26,12 @@
   - [剑指21. 调整数组顺序使奇数位于偶数前面](#剑指21-调整数组顺序使奇数位于偶数前面)
   - [283. 移动零](#283-移动零)
   - [88. 合并两个有序数组](#88-合并两个有序数组)
-  - [350. 两个数组的交集2](#350-两个数组的交集2)
+  - [349. 两个数组的交集](#349-两个数组的交集)
+  - [350. 两个数组的交集II](#350-两个数组的交集ii)
 - [哈希表技巧](#哈希表技巧)
   - [1. 两数之和](#1-两数之和)
   - [36. 有效的数独](#36-有效的数独)
+  - [128. 最长连续序列 [字节*]](#128-最长连续序列-字节)
   - [380. 常数时间插入/删除/随机取数组元素 [Medium]](#380-常数时间插入删除随机取数组元素-medium)
 - [搜索问题](#搜索问题)
   - [240. 搜索二维矩阵 II [Medium]](#240-搜索二维矩阵-ii-medium)
@@ -1045,18 +1047,88 @@ public:
 };
 ```
 
-### 350. 两个数组的交集2
+### 349. 两个数组的交集
+>  给定两个数组，编写一个函数来计算它们的交集。
+
+```
+输入：nums1 = [1,2,2,1], nums2 = [2,2]
+输出：[2]
+```
+
+- **intersection计算**
+- 基于set哈希表进行计算是最简单的思路，
+    - 对数组进行去重，然后对比
+    - 时间复杂度： O(N） 空间复杂度 O(N)
+```class Solution {
+public:
+    vector<int> getIntersection(set<int> s1, set<int> s2) {
+        if (s1.size() > s2.size())
+            getIntersection(s2,s1);
+        vector<int> res;
+        for (auto i : s1) {
+            if (s2.count(i)) {
+                res.push_back(i);
+            }
+        }
+        return res;
+    }
+    vector<int> intersection(vector<int>& nums1, vector<int>& nums2) {
+        int idx_0, idx_1 = 0;
+        set<int> s1, s2;
+        
+        for (auto i : nums1) 
+            s1.insert(i);
+        for (auto i : nums2)
+            s2.insert(i);
+        return getIntersection(s1,s2);
+    }
+};
+```
+- 其他思路： 先对数组进行排序，然后利用双指针法从左到右进行遍历处理
+    - 时间复杂度： O(mlogm+nlogn) 主要复杂度在列表排序上
+- 关键点： **`排序+双指针`**
+```c++
+class Solution {
+public:
+    vector<int> intersection(vector<int>& nums1, vector<int>& nums2) {
+        sort(nums1.begin(), nums1.end());
+        sort(nums2.begin(), nums2.end());
+        int length1 = nums1.size(), length2 = nums2.size();
+        int index1 = 0, index2 = 0;
+        vector<int> intersection;
+        while (index1 < length1 && index2 < length2) {
+            int num1 = nums1[index1], num2 = nums2[index2];
+            if (num1 == num2) {
+                // 保证加入元素的唯一性
+                if (!intersection.size() || num1 != intersection.back()) {
+                    intersection.push_back(num1);
+                }
+                index1++;
+                index2++;
+            } else if (num1 < num2) {
+                index1++;
+            } else {
+                index2++;
+            }
+        }
+        return intersection;
+    }
+};
+
+```
+
+### 350. 两个数组的交集II
 https://leetcode-cn.com/leetbook/read/top-interview-questions-easy/x2y0c2/
 
 允许有重复的数字，计算两个数组所有重复的数字(数字本身就是可以重复)
 
-所以不用考虑使用集合，可以通过哈希表/排序+双指针来完成。
+所以不用考虑使用集合，**可以通过哈希表/排序+双指针来完成**。
 
 - 双指针遍历排完序的两个数组：
   时间复杂度分析：排序复杂度O(mlogm+nlogn)；数组遍历O(m+n);总复杂度O(mlogm+nlogn);
   空间复杂度：记录结果的数组O(min(m,n))，使用STL.vector会到O(1)
 
-```
+```c++
 class Solution {
 public:
     vector<int> intersect(vector<int>& nums1, vector<int>& nums2) {
@@ -1109,7 +1181,6 @@ public:
             }
 
         }
-
         return res;
         }
 };
@@ -1226,7 +1297,7 @@ public:
 
 - 通过哈希表一次记录行、列、宫三种情况的数据分布
 
-```
+```c++
 class Solution {
 public:
     bool isValidSudoku(vector<vector<char>>& board) {
@@ -1250,6 +1321,45 @@ public:
             }
         }
         return true;
+    }
+};
+```
+
+### 128. 最长连续序列 [字节*]
+> 给定一个未排序的整数数组 nums ，找出数字连续的最长序列（不要求序列元素在原数组中连续）的长度
+
+```
+输入：nums = [100,4,200,1,3,2]
+输出：4
+解释：最长数字连续序列是 [1, 2, 3, 4]。它的长度为 4
+```
+
+- 要求时间复杂度 O(N)
+- **可以借助哈希表来实现**， 遍历每个元素是否存在连续的元素
+- 为了降低循环次数，仅当当前元素的前序值不存在时才开始搜索，**即当前元素为可能为连续段的开始元素**
+  - `s.count(p-1) == 0`
+  - 从而显著降低了时间复杂度
+
+```c++
+class Solution {
+public:
+    int longestConsecutive(vector<int>& nums) {
+        unordered_set<int> s;
+        for (auto p : nums) {
+            s.insert(p);
+        }
+        int ans = 0;
+        for (auto p : nums) {
+            if (!s.count(p - 1)) {                   
+                int tmp = 1;
+                while (s.count(++p)) {
+                    tmp++;
+                }
+                ans = max(ans, tmp);
+            }
+        }
+
+        return ans;
     }
 };
 ```
