--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -10,15 +10,13 @@
   - [658. Find K Closest Elements [Medium]](#658-find-k-closest-elements-medium)
   - [162. 寻找峰值](#162-寻找峰值)
 - [衍生题目](#衍生题目)
+  - [4. 寻找两个正序数组的中位数 **](#4-寻找两个正序数组的中位数-)
   - [50. Pow(x,n)](#50-powxn)
   - [367. 有效的完全平方数](#367-有效的完全平方数)
   - [744. 寻找比目标字母大的最小字母](#744-寻找比目标字母大的最小字母)
   - [153. 寻找旋转排列数组中的最小值 *](#153-寻找旋转排列数组中的最小值-)
   - [154. 寻找旋转排列数组中的最小值 II **](#154-寻找旋转排列数组中的最小值-ii-)
-  - [两个数组的交集](#两个数组的交集)
-  - [寻找重复数](#寻找重复数)
-  - [快慢指针法](#快慢指针法)
-  - [4. 寻找两个正序数组的中位数](#4-寻找两个正序数组的中位数)
+  - [287. 寻找重复数](#287-寻找重复数)
   - [719. 寻找第k小的距离对 [KEY]](#719-寻找第k小的距离对-key)
   - [410. 分割数组的最大值 [KEY]](#410-分割数组的最大值-key)
   - [29. 两数相除 [Medium]](#29-两数相除-medium)
@@ -584,6 +582,111 @@ public:
 ```
 
 ## 衍生题目
+
+### 4. 寻找两个正序数组的中位数 **
+> 给定两个大小分别为 m 和 n 的正序（从小到大）数组 nums1 和 nums2。请你找出并返回这两个正序数组的 中位数 。
+```
+输入：nums1 = [1,3], nums2 = [2]
+输出：2.00000
+解释：合并数组 = [1,2,3] ，中位数 2
+```
+
+- 问题转化：
+    - 定义为：**计算两个数组中k-th小的数字**
+    - https://leetcode-cn.com/problems/median-of-two-sorted-arrays/solution/di-k-xiao-shu-jie-fa-ni-zhen-de-dong-ma-by-geek-8m/
+    - 两个数组均为有序数组，所以可以采取二分的思想寻找k-th小的数字
+        - 对于数组A，B，`k = (l_A + l_B) / 2 ` 或者 `k = (l_A + l_B + 1) / 2` 如果`A[k/2-1] <= B[k/2-1]`,则说明区间`A[0~k/2-1]`这k/2个元素肯定不包含k-th小数字，可以排除这部分数据，在A数组中继续往前搜索：由于已经排除了k/2的数据，所以下面搜索的范围变为`k-k/2`
+        - 当k变为1时，即可进行返回判断，返回最小值
+- 关键点： **`双指针 + 二分思想`**
+```c++
+class Solution {
+public:
+    int getKthElments(vector<int>& nums1, vector<int>& nums2, int k) {
+        int m = nums1.size();
+        int n = nums2.size();
+        int index1 = 0;
+        int index2 = 0;
+        while (true) {
+            if (index1 == m) {
+                return nums2[index2 + k - 1];
+            }
+            if (index2 == n) {
+                return nums1[index1 + k - 1];
+            }
+            if (k == 1) {
+                return min(nums1[index1], nums2[index2]);
+            }
+            int newIndex1 = min(index1 + k / 2 - 1, m - 1);
+            int newIndex2 = min(index2 + k / 2 - 1, n - 1);
+            if (nums1[newIndex1] <= nums2[newIndex2]) {
+                k -= newIndex1 - index1 + 1; //调整搜索空间
+                index1 = newIndex1 + 1;  //设置索引
+            }
+            else {
+                k -= newIndex2 - index2 + 1;
+                index2 = newIndex2 + 1; 
+            }
+        }
+    }
+    double findMedianSortedArrays(vector<int>& nums1, vector<int>& nums2) {
+        int l1 = nums1.size();
+        int l2 = nums2.size();
+        if ((l1 + l2)%2 == 0) {
+            return (getKthElments(nums1, nums2, (l1 + l2) / 2) + getKthElments(nums1, nums2, (l1 + l2) / 2 + 1)) / 2.0;
+        }
+        else {
+            return getKthElments(nums1, nums2, (l1 + l2 + 1) / 2);
+        }
+
+
+
+    }
+};
+```
+
+- 思路2：更加直接的二分查找： 划分数组
+    - 直接查找数组里面的分割index
+    - 边界问题比较棘手
+    - 时间复杂度也是 O(log (m+n))
+
+```class Solution {
+public:
+    double findMedianSortedArrays(vector<int>& nums1, vector<int>& nums2) {
+        int l1 = nums1.size();
+        int l2 = nums2.size();
+        if (l1 > l2) {
+            return findMedianSortedArrays(nums2, nums1);
+        }
+        int left = 0;
+        int right = l1;
+        int k = (l1 + l2 + 1) / 2;
+        while (left < right) {
+            int mid = left + (right - left) / 2;
+            if (nums1[mid] < nums2[k - 1 - mid]) {
+                left = mid +1;
+            } 
+            else {
+                right = mid;
+            }
+        }
+ 
+        int c1 = max(left <= 0 ? INT_MIN:nums1[left-1],
+                          k - left <= 0 ? INT_MIN:nums2[k - left -1]);
+
+        if ((l1 + l2) % 2 == 1) {
+            return c1;
+        }
+        else {
+            int c2 = min(left >= l1 ? INT_MAX:nums1[left],
+                          k - left >= l2 ? INT_MAX:nums2[k - left]);
+
+            return (c1 + c2) / 2.0;
+        }
+
+    }
+};
+```
+
 ### 50. Pow(x,n)
 - 实现幂计算
 - 基本思路： 直接线性循环，暴力解法可能超时
@@ -734,7 +837,7 @@ https://leetcode-cn.com/problems/find-minimum-in-rotated-sorted-array/solution/e
   - 收缩右边界： `nums[mid] < nums[right]`
   - 收缩左边界：`nums[mid] > nums[right]`
 
-```
+```c++
 class Solution {
 public:
     int findMin(vector<int>& nums) {
@@ -793,7 +896,7 @@ public:
   - 收缩右边界： `nums[mid] < nums[right]`
   - 收缩左边界：`nums[mid] > nums[right]`
   - 逐一移动右边界： `nums[mid] == nums[right]`
-```
+```c++
 class Solution {
 public:
     int findMin(vector<int>& nums) {
@@ -856,85 +959,12 @@ public:
 
 ```
 
-### 两个数组的交集
-- **intersection计算**
-- 基于set哈希表进行计算是最简单的思路，
-    - 对数组进行去重，然后对比
-    - 时间复杂度： O(N） 空间复杂度 O(N)
-```class Solution {
-public:
-    vector<int> getIntersection(set<int> s1, set<int> s2) {
-        if (s1.size() > s2.size())
-            getIntersection(s2,s1);
-        vector<int> res;
-        for (auto i : s1) {
-            if (s2.count(i)) {
-                res.push_back(i);
-            }
-        }
-        return res;
-    }
-    vector<int> intersection(vector<int>& nums1, vector<int>& nums2) {
-        int idx_0, idx_1 = 0;
-        set<int> s1, s2;
-        
-        for (auto i : nums1) 
-            s1.insert(i);
-        for (auto i : nums2)
-            s2.insert(i);
-        return getIntersection(s1,s2);
-    }
-};
-```
-- 其他思路： 先对数组进行排序，然后利用双指针法从左到右进行遍历处理
-    - 时间复杂度： O(mlogm+nlogn) 主要复杂度在列表排序上
-```class Solution {
-public:
-    vector<int> intersection(vector<int>& nums1, vector<int>& nums2) {
-        sort(nums1.begin(), nums1.end());
-        sort(nums2.begin(), nums2.end());
-        int length1 = nums1.size(), length2 = nums2.size();
-        int index1 = 0, index2 = 0;
-        vector<int> intersection;
-        while (index1 < length1 && index2 < length2) {
-            int num1 = nums1[index1], num2 = nums2[index2];
-            if (num1 == num2) {
-                // 保证加入元素的唯一性
-                if (!intersection.size() || num1 != intersection.back()) {
-                    intersection.push_back(num1);
-                }
-                index1++;
-                index2++;
-            } else if (num1 < num2) {
-                index1++;
-            } else {
-                index2++;
-            }
-        }
-        return intersection;
-    }
-};
-
-```
 
 
-### 寻找重复数
 
--  排序+遍历
-    - 最为朴素的方法，可能不符合题目要求/限制
-    - 时间复杂度： O(nlogN)
-```class Solution {
-public:
-    int findDuplicate(vector<int>& nums) {
-        sort(nums.begin(), nums.end());
-        for (int i = 0; i < nums.size() - 1; i++) {
-            if (nums[i] == nums[i+1])
-                return nums[i];
-        }
-        return nums[0];
-    }
-};
-```
+### 287. 寻找重复数
+> 给定一个包含 n + 1 个整数的数组 nums ，其数字都在 1 到 n 之间（包括 1 和 n），可知至少存在一个重复的整数。假设 nums **只有一个重复的整数 ，找出 这个重复的数**
+
 - 二分查找法
     - 本题有特殊设置：
         - 给定的数组元素范围在`[1,n]`之间，共有`1+n`个元素
@@ -943,7 +973,8 @@ public:
         - 需要根据抽屉原理来进行查找： 具体而言，从1～n中遍历，查找小于等于x (`<=x`)的值的数量 `cnt`
         - 如果`cnt <= x`则说明区间`[1,x]`不存在重复情况，否则说明`[1,x]`区间必然存在重复
     - 时间复杂度： O(nlogn)
-```class Solution {
+```c++
+class Solution {
 public:
     int findDuplicate(vector<int>& nums) {
         int left = 1;
@@ -969,12 +1000,30 @@ public:
 };
 ```
 
-### 快慢指针法
-- 如果将数组构成一个链表形式的话，可以用快慢指针法来找到链表的环
-- 通过链表查环的操作来变相实现重复数字的查找
-- 时间复杂度 O(n) 空间复杂度 O(1)
-- 该题目下最优的解法
-```class Solution {
+-  排序+遍历
+    - 最为朴素的方法，可能不符合题目要求/限制
+    - 时间复杂度： O(nlogN)
+```c++
+class Solution {
+public:
+    int findDuplicate(vector<int>& nums) {
+        sort(nums.begin(), nums.end());
+        for (int i = 0; i < nums.size() - 1; i++) {
+            if (nums[i] == nums[i+1])
+                return nums[i];
+        }
+        return nums[0];
+    }
+};
+```
+-  进阶做法： **快慢指针法**
+   - 如果将数组构成一个链表形式的话，**可以用快慢指针法来找到链表的环的入口**
+   - 通过链表查环的操作来变相实现重复数字的查找
+   - 先分fast / slow 移动，等快慢指针移动到相同位置时，然后调整slow 从头开始遍历，当二者再次相遇时即为结果
+   - 时间复杂度 O(n) 空间复杂度 O(1)
+   - 该题目下最优的解法
+```c++
+class Solution {
 public:
     int findDuplicate(vector<int>& nums) {
         int slow = 0, fast = 0;
@@ -992,102 +1041,7 @@ public:
 };
 ```
 
-### 4. 寻找两个正序数组的中位数
-- hard
-- 问题转化：
-    - 定义为：**计算两个数组中k-th小的数字**
-    - https://leetcode-cn.com/problems/median-of-two-sorted-arrays/solution/di-k-xiao-shu-jie-fa-ni-zhen-de-dong-ma-by-geek-8m/
-    - 两个数组均为有序数组，所以可以采取二分的思想寻找k-th小的数字
-        - 对于数组A，B，`k = (l_A + l_B) / 2 ` 或者 `k = (l_A + l_B + 1) / 2` 如果`A[k/2-1] <= B[k/2-1]`,则说明区间`A[0~k/2-1]`这k/2个元素肯定不包含k-th小数字，可以排除这部分数据，在A数组中继续往前搜索：由于已经排除了k/2的数据，所以下面搜索的范围变为`k-k/2`
-        - 当k变为1时，即可进行返回判断，返回最小值
 
-```class Solution {
-public:
-    int getKthElments(vector<int>& nums1, vector<int>& nums2, int k) {
-        int m = nums1.size();
-        int n = nums2.size();
-        int index1 = 0;
-        int index2 = 0;
-        while (true) {
-            if (index1 == m) {
-                return nums2[index2 + k - 1];
-            }
-            if (index2 == n) {
-                return nums1[index1 + k - 1];
-            }
-            if (k == 1) {
-                return min(nums1[index1], nums2[index2]);
-            }
-            int newIndex1 = min(index1 + k / 2 - 1, m - 1);
-            int newIndex2 = min(index2 + k / 2 - 1, n - 1);
-            if (nums1[newIndex1] <= nums2[newIndex2]) {
-                k -= newIndex1 - index1 + 1; //调整搜索空间
-                index1 = newIndex1 + 1;  //设置索引
-            }
-            else {
-                k -= newIndex2 - index2 + 1;
-                index2 = newIndex2 + 1; 
-            }
-        }
-    }
-    double findMedianSortedArrays(vector<int>& nums1, vector<int>& nums2) {
-        int l1 = nums1.size();
-        int l2 = nums2.size();
-        if ((l1 + l2)%2 == 0) {
-            return (getKthElments(nums1, nums2, (l1 + l2) / 2) + getKthElments(nums1, nums2, (l1 + l2) / 2 + 1)) / 2.0;
-        }
-        else {
-            return getKthElments(nums1, nums2, (l1 + l2 + 1) / 2);
-        }
-
-
-
-    }
-};
-```
-
-- 思路2：更加直接的二分查找： 划分数组
-    - 直接查找数组里面的分割index
-    - 边界问题比较棘手
-    - 时间复杂度也是 O(log (m+n))
-
-```class Solution {
-public:
-    double findMedianSortedArrays(vector<int>& nums1, vector<int>& nums2) {
-        int l1 = nums1.size();
-        int l2 = nums2.size();
-        if (l1 > l2) {
-            return findMedianSortedArrays(nums2, nums1);
-        }
-        int left = 0;
-        int right = l1;
-        int k = (l1 + l2 + 1) / 2;
-        while (left < right) {
-            int mid = left + (right - left) / 2;
-            if (nums1[mid] < nums2[k - 1 - mid]) {
-                left = mid +1;
-            } 
-            else {
-                right = mid;
-            }
-        }
- 
-        int c1 = max(left <= 0 ? INT_MIN:nums1[left-1],
-                          k - left <= 0 ? INT_MIN:nums2[k - left -1]);
-
-        if ((l1 + l2) % 2 == 1) {
-            return c1;
-        }
-        else {
-            int c2 = min(left >= l1 ? INT_MAX:nums1[left],
-                          k - left >= l2 ? INT_MAX:nums2[k - left]);
-
-            return (c1 + c2) / 2.0;
-        }
-
-    }
-};
-```
 
 ### 719. 寻找第k小的距离对 [KEY]
 
